; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/flexfilelayout/extr_flexfilelayout.c_nfs4_ff_layout_stat_io_update_requested.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/flexfilelayout/extr_flexfilelayout.c_nfs4_ff_layout_stat_io_update_requested.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_ff_layoutstat = type { %struct.nfs4_ff_io_stat }
%struct.nfs4_ff_io_stat = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfs4_ff_layoutstat*, i64)* @nfs4_ff_layout_stat_io_update_requested to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfs4_ff_layout_stat_io_update_requested(%struct.nfs4_ff_layoutstat* %0, i64 %1) #0 {
  %3 = alloca %struct.nfs4_ff_layoutstat*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.nfs4_ff_io_stat*, align 8
  store %struct.nfs4_ff_layoutstat* %0, %struct.nfs4_ff_layoutstat** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.nfs4_ff_layoutstat*, %struct.nfs4_ff_layoutstat** %3, align 8
  %7 = getelementptr inbounds %struct.nfs4_ff_layoutstat, %struct.nfs4_ff_layoutstat* %6, i32 0, i32 0
  store %struct.nfs4_ff_io_stat* %7, %struct.nfs4_ff_io_stat** %5, align 8
  %8 = load %struct.nfs4_ff_io_stat*, %struct.nfs4_ff_io_stat** %5, align 8
  %9 = getelementptr inbounds %struct.nfs4_ff_io_stat, %struct.nfs4_ff_io_stat* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %9, align 4
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.nfs4_ff_io_stat*, %struct.nfs4_ff_io_stat** %5, align 8
  %14 = getelementptr inbounds %struct.nfs4_ff_io_stat, %struct.nfs4_ff_io_stat* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = sext i32 %15 to i64
  %17 = add nsw i64 %16, %12
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
